syntax = "proto3";
package inner_message;
option  go_package = "/inner";


message ItemMap
{
    map<int64,int64> Items = 1;
}

